Test/Files/Parser/FullParserTestCases/Good/FullTests/testcase93-01.java
 class TestClass {
	public static void main (String[] args) {
		int r = 5;
		while(r > 0)
		{
			r = r - 1;
			System.out.println(r);
		}
	}
 }
 
 class TestClass2 extends TestClass {
	int a;
	int b; 
	int c;
	
	boolean x;
	boolean y;
	boolean z;
	
	public string toString() {
		if((x && y) || z)
		{
			System.out.println(a+b);
		}
		else
		{
			System.out.println(c);
		}
		return new string();
	}
 
 }