Test/Files/Parser/FullParserTestCases/Bad/FullTests/testcase01_03.java
class C1 {
	public static void main(String[] c2) {
		while (this)
			{ c3 = 4 || - 4 }
	}
}

class C2 extends C3 {
	boolean boolean;
	public C4 c5(C6 c7, C8 c9) {
		System.out.println(100);
		return null.c10();
	}
}

